--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           dotnet-version: 6.0.x
       - name: Build
-        run: dotnet run --project build/build/build.csproj pack
+        run: dotnet run --project build/build.csproj pack
       - uses: actions/upload-artifact@v2
         if: runner.os == 'Windows' && startsWith(github.ref, 'refs/tags/v')
         with:
@@ -48,6 +48,6 @@ jobs:
         with:
           dotnet-version: 6.0.x
       - name: Publish to nuget.org
-        run: dotnet run --project build/build/build.csproj deploy
+        run: dotnet run --project build/build.csproj deploy
         env:
           NUGET_AUTH_TOKEN: ${{secrets.NUGET_API_KEY}}
