build: removed release helper

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,7 +9,7 @@
     <IncludeSource>True</IncludeSource>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <Copyright>Copyright $([System.Char]::ConvertFromUtf32(169)) Vertiq 2019-$([System.DateTime]::Today.ToString('yyyy'))</Copyright>
+    <Copyright>Copyright $([System.Char]::ConvertFromUtf32(169)) Xenial 2019-$([System.DateTime]::Today.ToString('yyyy'))</Copyright>
     <Authors>Vertiq</Authors>
     <RepositoryUrl>https://github.com/xenial-io/Xenial.BTool</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
