--- a/Xenial.BTool/Xenial.BTool.csproj
+++ b/Xenial.BTool/Xenial.BTool.csproj
@@ -23,5 +23,12 @@
     <PackageReference Include="SimpleExec" Version="11.0.0" />
     <PackageReference Include="System.IO.Abstractions" Version="17.2.3" />
   </ItemGroup>
-
+  
+  <ItemGroup Condition="'$(GITHUB_ACTIONS)' != ''">
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+  
 </Project>
